1/1.09/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - protocol: TCP
      port: 2346
      targetPort: 3000
