1/1.09/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ingress
spec:
  rules:
  - http:
      paths:
      - path: /ping
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2346
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project05-svc
            port:
              number: 2345
